# F.O.R.G.E.

./: .gitignore  Cargo.toml  README.md  release.sh
.arhit/: architecture.json  config.json  dependencies.json
.githooks/: pre-commit
Formula/: devforge.rb
badges/: _clones-history.json  (+1 more)
plugins/echo/: Cargo.toml
plugins/echo-host-api/: Cargo.toml
plugins/echo-host-api/src/: lib.rs
plugins/echo/migrations/: V001_init.sql  V002_daily_reports.sql  V003_daily_report_suggestions.sql  V004_app_settings.sql  V005_next_step_rules.sql
plugins/echo/src/: config.rs  lib.rs  state.rs
plugins/echo/src/actions/: executor.rs  mod.rs  parser.rs
plugins/echo/src/claude/: events.rs  mod.rs  prompt_builder.rs
plugins/echo/src/daily_report/: mod.rs  scheduler.rs
plugins/echo/src/db/: mod.rs
plugins/echo/src/db/repo/: app_settings.rs  autonomous.rs  chats.rs  daily_reports.rs  memories.rs  messages.rs  mod.rs  next_step.rs  stats.rs
plugins/echo/src/memory/: mod.rs  scheduler.rs
plugins/echo/src/next_step/: mod.rs
plugins/echo/src/routes/: autonomous.rs  conversations.rs  daily_reports.rs  memories.rs  memory.rs  mod.rs  next_step.rs  stats.rs
plugins/echo/src/scheduler/: mod.rs  runner.rs
plugins/echo/src/ws/: mod.rs  protocol.rs
plugins/echo/tests/: autonomous_scheduler_e2e.rs  db_init.rs  phase6_repos_and_parsers.rs  run_user_message_e2e.rs
tmux-web/: Cargo.toml  MIGRATION_no_projects.md  README.md
tmux-web/.arhit/docs/: _index.json
tmux-web/.arhit/docs/files/: bootstrap.js.md  modal.js.md  todo-tab.js.md  user-settings-api.js.md
tmux-web/.arhit/docs/files/src/: git.rs.md  ws_tasks.rs.md
tmux-web/.arhit/docs/files/tmux-web/src/: auth.rs.md  qr_print.rs.md  server_config.rs.md  themes.rs.md  todos.rs.md  user_settings.rs.md
tmux-web/.arhit/docs/files/tmux-web/static/: app.js.md  index.html.md  style.css.md
tmux-web/.arhit/docs/files/tmux-web/static/js/core/: bootstrap.js.md  state.js.md
tmux-web/.arhit/docs/files/tmux-web/static/js/settings/: modal.js.md  todo-tab.js.md  user-settings-api.js.md
tmux-web/.arhit/docs/files/tmux-web/static/js/tasks/: crud.js.md  render.js.md
tmux-web/.arhit/docs/other/: CommitReq.md  LogQuery.md  PathsReq.md  ProjectStore__find_any.md  SessionDto.md  attention.md  attention__AttentionState.md  attention__detect_claude_prompt.md  attention__watcher_loop.md  buildSessionItem.md  commitNow.md  computeGitLanes.md  fetchGitAll.md  fetchGitLog.md  fetchGitStatus.md  fetchProjects.md  get_git_log.md  get_git_status.md  get_sessions.md  get_user_settings.md  git-tab-bootstrap.md  main__AppState.md  main__SessionDto.md  main__get_sessions.md  openCreateModal.md  openTodoEditModal.md  patch_user_settings.md  post_git_commit.md  post_git_stage.md  post_git_unstage.md  promote_todo.md  purge_task.md  renderColumn.md  renderGitFiles.md  renderGitGraph.md  renderGitToolbar.md  renderProjectSelect.md  renderSidebar.md  renderTodoCard.md  session-item-needs-attention.md  (+6 more)
tmux-web/.arhit/docs/other/src/: git.rs__commit.md  git.rs__log.md  git.rs__stage.md  git.rs__status.md  git.rs__unstage.md  tasks_watcher.rs_public-helpers.md
tmux-web/.arhit/docs/other/static/: index.html_git-pane.md  index.html_git-tab-button.md  style.css_git-styles.md
tmux-web/.arhit/docs/other/tmux-web/src/: main.rs__windows_api.md  tmux.rs__windows.md
tmux-web/.arhit/docs/other/tmux-web/static/: app.js__windowBar.md
tmux-web/.arhit/docs/pages/: attention-feature.md  cross-project-sessions-frontend.md  cross-project-sessions.md  git-tab.md  todo-plan-mode.md  user-settings-todo-behavior.md
tmux-web/src/: attention.rs  auth.rs  auto_promote.rs  claude_memory.rs  cli.rs  daemon.rs  echo_host.rs  git.rs  main.rs  notifier.rs  notifier_config.rs  paths.rs  projects.rs  pty.rs  push.rs  push_store.rs  pwa.rs  qr_print.rs  remote_proxy.rs  remotes.rs  server_config.rs  session_history.rs  static_embed.rs  tasks.rs  tasks_watcher.rs  themes.rs  tmux.rs  todos.rs  user_settings.rs  vapid.rs  worktree.rs  ws.rs  ws_tasks.rs  ws_todos.rs
tmux-web/static/: app.js  command-dock.js  hotkeys.js  index.html  manifest.webmanifest  quick-cmd.js  style.css  sw.js
tmux-web/static/css/: base.css  command-dock.css  daily-summary.css  echo-actions.css  echo-notifications.css  echo.css  git-tab.css  home.css  layout.css  mobile.css  modals.css  next-step-popup.css  notifications.css  origin-tabs.css  project-bar.css  pwa.css  quick-cmd.css  screensaver.css  settings-modal.css  sidebar.css  tab-bar.css  tasks.css  theme-editor.css  tui-channels.css  tui-tab.css  window-bar.css
tmux-web/static/js/: main.js  public-api.js
tmux-web/static/js/core/: api.js  auth.js  bootstrap.js  dom.js  markdown.js  state.js  utils.js  viewport.js
tmux-web/static/js/daily-summary/: daily-summary.js
tmux-web/static/js/echo/: action-buttons.js  api.js  autonomous.js  chat.js  main.js  memory.js  model-picker.js  notifications.js  settings.js  stats.js  ws.js
tmux-web/static/js/home/: home.js
tmux-web/static/js/projects/: new-project.js  projects.js
tmux-web/static/js/pwa/: bootstrap.js  install.js  mobile.js  push.js  register.js
tmux-web/static/js/remote/: healthz.js  servers.js
tmux-web/static/js/screensaver/: screensaver.js
tmux-web/static/js/sessions/: claude-memory.js  next-step-popup.js  sessions.js  windows.js
tmux-web/static/js/settings/: daily-summary-tab.js  interface-tab.js  modal.js  notifications-tab.js  remotes-tab.js  todo-tab.js  user-settings-api.js
tmux-web/static/js/sidebar/: mobile.js  origin-tabs.js  sidebar.js
tmux-web/static/js/tabs/: tabs.js  tui-tabs.js
tmux-web/static/js/tasks/: crud.js  gantt.js  modals.js  render.js
tmux-web/static/js/terminal/: theme-mapper.js  xterm.js
tmux-web/static/js/themes/: api.js  editor.js  panel.js
tmux-web/static/js/ui/: tooltip.js
tmux-web/static/js/ws/: attach.js  tasks-ws.js  todos-ws.js
tmux-web/tests/: echo_smoke.rs
tmux-web/tests/frontend/: README.md  pwa_bootstrap_optin.test.js  pwa_mobile_helper.test.js  pwa_push_helper.test.js  pwa_register.test.mjs  sidebar_grouping.test.js  sw.test.js
(+558 files in other folders)
