[workspace]
resolver = "2"
members = [
    "tmux-web",
    "plugins/echo",
    "plugins/echo-host-api",
]
exclude = ["beads_rust"]

[workspace.package]
edition = "2021"
license = "MIT"

# Общие версии зависимостей, переиспользуемых в нескольких членах workspace.
# Конкретные крейты подключаются в Cargo.toml членов через `.workspace = true`.
# Профили вынесены на уровень workspace (cargo требует профили только в root
# при включённом workspace). Опции совпадают с прежним tmux-web/Cargo.toml.
[profile.release]
opt-level = 3
lto = "thin"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
axum = { version = "0.7", features = ["ws", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
async-trait = "0.1"
