[package]
name = "devforge"
version = "0.1.1"
edition = "2021"
description = "Web-viewer для tmux сессий через WebSocket + xterm.js"
license = "MIT"
repository = "https://github.com/darkClaw921/F.O.R.G.E."
homepage = "https://github.com/darkClaw921/F.O.R.G.E."
readme = "../README.md"
keywords = ["tmux", "web", "terminal", "kanban", "git"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures-util = "0.3"
bytes = "1"
# Phase 6.D — file-watcher для .beads/issues.jsonl. Версия 6.1.x — последняя
# в линии 6.x на момент написания (актуальные релизы 9.x ещё в RC). Tokio
# integration: notify::recommended_watcher принимает любой EventHandler,
# включая tokio::sync::mpsc::UnboundedSender<notify::Result<Event>>.
notify = "6"
uuid = { version = "1.23.1", features = ["v4"] }
# Phase 1 (Embedded static) — встраиваем содержимое tmux-web/static/ в бинарь.
# Feature interpolate-folder-path позволяет указывать $CARGO_MANIFEST_DIR в
# #[folder = "..."], чтобы путь резолвился относительно Cargo.toml пакета,
# а не workspace root.
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
# Определение Content-Type по расширению файла (text/html, application/javascript,
# text/css, image/*) при отдаче embedded ассетов через serve_static.
mime_guess = "2"

# Daemon-режим (devforge start) — нужен setsid(2) чтобы детачнуть дочерний
# процесс от controlling terminal, иначе он умрёт при закрытии shell.
# libc уже есть транзитивно (tokio, mio); пинуем явно для предсказуемости.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = "thin"

[[bin]]
name = "devforge"
path = "src/main.rs"
