[package]
name = "devforge"
version = "0.1.42"
edition = "2021"
description = "Web-viewer для tmux сессий через WebSocket + xterm.js"
license = "MIT"
repository = "https://github.com/darkClaw921/F.O.R.G.E."
homepage = "https://github.com/darkClaw921/F.O.R.G.E."
readme = "../README.md"
keywords = ["tmux", "web", "terminal", "kanban", "git"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures-util = "0.3"
bytes = "1"
# Phase 6.D — file-watcher для .beads/issues.jsonl. Версия 6.1.x — последняя
# в линии 6.x на момент написания (актуальные релизы 9.x ещё в RC). Tokio
# integration: notify::recommended_watcher принимает любой EventHandler,
# включая tokio::sync::mpsc::UnboundedSender<notify::Result<Event>>.
notify = "6"
uuid = { version = "1.23.1", features = ["v4"] }
# Phase 1 (Embedded static) — встраиваем содержимое tmux-web/static/ в бинарь.
# Feature interpolate-folder-path позволяет указывать $CARGO_MANIFEST_DIR в
# #[folder = "..."], чтобы путь резолвился относительно Cargo.toml пакета,
# а не workspace root.
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
# Определение Content-Type по расширению файла (text/html, application/javascript,
# text/css, image/*) при отдаче embedded ассетов через serve_static.
mime_guess = "2"

# Phase 3 — HTTP-клиент для proxy на удалённые devforge-инстансы.
# Используется в `remote_proxy::proxy_request` (Bearer-token, json/stream
# body). `default-features = false` отключает default-tls (openssl) — берём
# rustls для предсказуемой сборки на разных платформах (включая Homebrew
# bottle на macOS без OpenSSL). Features:
#   - json   — `RequestBuilder::json` / `Response::json` (serde-сериализация);
#   - stream — поддержка стримящегося body, нужна для WS-прокси в Phase 4;
#   - rustls-tls — TLS без OpenSSL-зависимости.
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Phase 4 — WebSocket-клиент для upstream-прокси на удалённые devforge-инстансы.
# Используется в `remote_proxy::proxy_websocket` для проксирования /ws/attach,
# /ws/lazygit, /ws/tasks, /ws/todos. Версия 0.24 — последняя стабильная линия
# с тем же набором features, что и в проекте (rustls-tls-webpki-roots). 0.26+
# тянут tungstenite 0.27 и breaking-changes в Request/Response API; апгрейд
# отложен в технический долг.
# Features:
#   - connect / handshake — клиентский handshake (default включены, фиксируем явно).
#   - rustls-tls-webpki-roots — TLS без OpenSSL, доверенные корни через
#     webpki-roots (Mozilla CA bundle), консистентно с reqwest rustls-tls.
tokio-tungstenite = { version = "0.24", features = ["connect", "handshake", "rustls-tls-webpki-roots"] }

# Генерация QR-кодов для startup-баннера: пользователь может отсканировать
# код камерой телефона и сразу открыть tmux-web mobile UI. default-features
# отключены — нам не нужен image-рендеринг (svg/png), только unicode-вывод
# в stdout, который доступен в базовом API крейта без флагов.
qrcode = { version = "0.14", default-features = false }
# Резолв LAN-IP машины (не loopback) — нужен чтобы вывести в QR URL,
# доступный с телефона в той же Wi-Fi сети.
local-ip-address = "0.6"

# Echo плагин — встроенный чат-ассистент на Claude CLI. Подключается
# как path-dep в Cargo workspace (members: plugins/echo, plugins/echo-host-api).
# forge-echo инициализируется в main() через `forge_echo::init` и
# `register_routes` (~ tmux-web/src/main.rs:487).
# echo-host-api нужен для импорта trait HostApi в `echo_host::EchoHostAdapter`.
forge-echo = { path = "../plugins/echo" }
echo-host-api = { path = "../plugins/echo-host-api" }
# async-trait нужен в tmux-web потому что EchoHostAdapter имплементит
# echo_host_api::HostApi (trait объявлен через #[async_trait]).
async-trait = "0.1"

# Daemon-режим (devforge start) — нужен setsid(2) чтобы детачнуть дочерний
# процесс от controlling terminal, иначе он умрёт при закрытии shell.
# libc уже есть транзитивно (tokio, mio); пинуем явно для предсказуемости.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Dev-dependencies — нужны только для cargo test.
#
# tower с feature "util" даёт ServiceExt::oneshot — стандартный способ
# гонять Router через единичный Request без поднятия настоящего HTTP-сервера.
# Используется в auth.rs тестах (Phase 1 / ypp1.4).
#
# wiremock — HTTP-mock-сервер для интеграционных тестов remote_proxy.
# Версия 0.6.x — последняя стабильная линия (0.6.5 на момент написания),
# совместима с tokio 1.x. Используется в tests/proxy_http.rs (Phase 8 .1)
# и tests/proxy_hop_by_hop.rs (Phase 8 .2).
[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"

# Phase 6.9 — integration smoke-test для Echo (tests/echo_smoke.rs).
# tempfile нужен для mock-CLI shell-скрипта.
tempfile = "3"

[[bin]]
name = "devforge"
path = "src/main.rs"
