[package]
name = "devforge"
version = "0.1.48"
edition = "2021"
description = "Web-viewer для tmux сессий через WebSocket + xterm.js"
license = "MIT"
repository = "https://github.com/darkClaw921/F.O.R.G.E."
homepage = "https://github.com/darkClaw921/F.O.R.G.E."
readme = "../README.md"
keywords = ["tmux", "web", "terminal", "kanban", "git"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures-util = "0.3"
bytes = "1"
# Phase 6.D — file-watcher для .beads/issues.jsonl. Версия 6.1.x — последняя
# в линии 6.x на момент написания (актуальные релизы 9.x ещё в RC). Tokio
# integration: notify::recommended_watcher принимает любой EventHandler,
# включая tokio::sync::mpsc::UnboundedSender<notify::Result<Event>>.
notify = "6"
uuid = { version = "1.23.1", features = ["v4"] }
# Phase 1 (Embedded static) — встраиваем содержимое tmux-web/static/ в бинарь.
# Feature interpolate-folder-path позволяет указывать $CARGO_MANIFEST_DIR в
# #[folder = "..."], чтобы путь резолвился относительно Cargo.toml пакета,
# а не workspace root.
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
# Определение Content-Type по расширению файла (text/html, application/javascript,
# text/css, image/*) при отдаче embedded ассетов через serve_static.
mime_guess = "2"

# Phase 3 — HTTP-клиент для proxy на удалённые devforge-инстансы.
# Используется в `remote_proxy::proxy_request` (Bearer-token, json/stream
# body). `default-features = false` отключает default-tls (openssl) — берём
# rustls для предсказуемой сборки на разных платформах (включая Homebrew
# bottle на macOS без OpenSSL). Features:
#   - json   — `RequestBuilder::json` / `Response::json` (serde-сериализация);
#   - stream — поддержка стримящегося body, нужна для WS-прокси в Phase 4;
#   - rustls-tls — TLS без OpenSSL-зависимости.
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Phase 4 — WebSocket-клиент для upstream-прокси на удалённые devforge-инстансы.
# Используется в `remote_proxy::proxy_websocket` для проксирования /ws/attach,
# /ws/lazygit, /ws/tasks, /ws/todos. Версия 0.24 — последняя стабильная линия
# с тем же набором features, что и в проекте (rustls-tls-webpki-roots). 0.26+
# тянут tungstenite 0.27 и breaking-changes в Request/Response API; апгрейд
# отложен в технический долг.
# Features:
#   - connect / handshake — клиентский handshake (default включены, фиксируем явно).
#   - rustls-tls-webpki-roots — TLS без OpenSSL, доверенные корни через
#     webpki-roots (Mozilla CA bundle), консистентно с reqwest rustls-tls.
tokio-tungstenite = { version = "0.24", features = ["connect", "handshake", "rustls-tls-webpki-roots"] }

# Генерация QR-кодов для startup-баннера: пользователь может отсканировать
# код камерой телефона и сразу открыть tmux-web mobile UI. default-features
# отключены — нам не нужен image-рендеринг (svg/png), только unicode-вывод
# в stdout, который доступен в базовом API крейта без флагов.
qrcode = { version = "0.14", default-features = false }
# Резолв LAN-IP машины (не loopback) — нужен чтобы вывести в QR URL,
# доступный с телефона в той же Wi-Fi сети.
local-ip-address = "0.6"

# Echo плагин — встроенный чат-ассистент на Claude CLI. Подключается
# как path-dep в Cargo workspace (members: plugins/echo, plugins/echo-host-api).
# forge-echo инициализируется в main() через `forge_echo::init` и
# `register_routes` (~ tmux-web/src/main.rs:487).
# echo-host-api нужен для импорта trait HostApi в `echo_host::EchoHostAdapter`.
forge-echo = { path = "../plugins/echo" }
echo-host-api = { path = "../plugins/echo-host-api" }
# async-trait нужен в tmux-web потому что EchoHostAdapter имплементит
# echo_host_api::HostApi (trait объявлен через #[async_trait]).
async-trait = "0.1"

# PWA / Web Push (opt-in, флаг --pwa). Базовый набор (p256/rand_core/base64)
# добавлен в Фазе 1 — Фаза 2 их НЕ дублирует, лишь добавляет chrono для
# RFC3339-таймстемпов подписок (см. ниже). Крейт web-push НЕ подключается
# (тянет openssl безусловно — см. подробное обоснование ниже).
#
# PWA / VAPID — генерация и хранение P-256 ключевой пары для Web Push.
#
# ВАЖНОЕ ОТКЛОНЕНИЕ ОТ ИСХОДНОГО ПЛАНА (задокументировано в vapid.rs и в
# отчёте Фазы 1): план предлагал `web-push 0.11` для VapidSignatureBuilder.
# Однако web-push 0.11 БЕЗУСЛОВНО (не опционально) зависит от крейта `ece`
# с дефолтным `backend-openssl`, а любой его HTTP-клиент (`isahc-client`
# по умолчанию ИЛИ `hyper-client`) дополнительно тянет openssl и hyper 0.14.
# То есть web-push 0.11 НЕВОЗМОЖНО подключить без openssl ни с какими
# features. Это прямо нарушает жёсткое требование проекта
# «openssl НЕ подтянулся, hyper совместим с axum 0.7 (rustls-стек)».
#
# Решение: VAPID — это всего лишь ECDSA P-256 + ES256-JWT-подпись, что
# полностью покрывается чистым Rust-крейтом `p256` (без openssl,
# консистентно с rustls-стеком reqwest/tokio-tungstenite). Поэтому
# web-push НЕ подключаем; VapidStore реализован на p256 напрямую
# (генерация пары, base64url-хранение приватника, ES256-подпись для JWT).
#
# p256 0.13 (features `ecdsa` для подписи, `jwk`/`pem` не нужны):
#   - SigningKey::random(OsRng) → VAPID-приватник (raw 32-байт скаляр);
#   - VerifyingKey::to_encoded_point(false) → 65-байт uncompressed pubkey
#     (формат applicationServerKey для браузерного pushManager.subscribe).
# Фаза 3 добавляет фичу `ecdh` — server↔subscription Diffie-Hellman
# (`p256::ecdh::diffie_hellman`) для RFC 8291 key-derivation в push.rs.
p256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
# rand_core 0.6 с `getrandom` — источник OsRng для p256 SigningKey::random.
# Версия 0.6 совместима с RNG-трейтами, которые ожидает p256 0.13.
rand_core = { version = "0.6", features = ["getrandom"] }
# base64 0.22 — base64url-no-pad кодирование приватного ключа VAPID при
# хранении в ~/.forge/vapid.json и публичного ключа для отдачи фронту.
base64 = "0.22"
# chrono — RFC3339-таймстемпы `created_at` для push-подписок
# (push_store::StoredSubscription). Уже в [workspace.dependencies] и
# Cargo.lock (echo-плагин), поэтому подключение через `.workspace = true`
# НЕ добавляет новый крейт в дерево и НЕ тянет openssl. Дефолтные фичи
# (включая `now` для `Utc::now`) сохранены; `serde` — на будущее.
chrono = { workspace = true }

# PWA / Web Push доставка (Фаза 3, push.rs) — ручная реализация шифрования
# payload по RFC 8291 (`aes128gcm`) + RFC 8188 на чистом RustCrypto, БЕЗ
# openssl. Крейт `ece` (его тянет web-push) имеет ТОЛЬКО `backend-openssl`
# (нет rust-crypto-фичи), поэтому ECE реализован вручную:
#   - aes-gcm 0.10 — AES-128-GCM (AEAD) для шифрования одной ECE-записи.
#     default-features (включая `aes` и `alloc`) достаточно; openssl не тянет.
#   - hkdf 0.12 — HKDF-SHA256 для вывода CEK (key_info) и nonce (nonce_info)
#     из ECDH-секрета и auth-secret подписки (RFC 8291 §3.4).
# Версии 0.10/0.12 — матч-сет RustCrypto к уже подключённым sha2 0.10 / hmac
# 0.12 / p256 0.13 (один общий generic-array/digest ecosystem). p256 здесь
# получает доп. фичу `ecdh` (см. ниже) для server↔subscription ECDH.
aes-gcm = "0.10"
hkdf = "0.12"
# sha2 уже в дереве транзитивно (digest-экосистема); пинуем явно — нужен как
# hash для HKDF-SHA256 и для ES256-JWT (SHA-256 digest перед ECDSA-подписью).
sha2 = "0.10"

# Daemon-режим (devforge start) — нужен setsid(2) чтобы детачнуть дочерний
# процесс от controlling terminal, иначе он умрёт при закрытии shell.
# libc уже есть транзитивно (tokio, mio); пинуем явно для предсказуемости.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Dev-dependencies — нужны только для cargo test.
#
# tower с feature "util" даёт ServiceExt::oneshot — стандартный способ
# гонять Router через единичный Request без поднятия настоящего HTTP-сервера.
# Используется в auth.rs тестах (Phase 1 / ypp1.4).
#
# wiremock — HTTP-mock-сервер для интеграционных тестов remote_proxy.
# Версия 0.6.x — последняя стабильная линия (0.6.5 на момент написания),
# совместима с tokio 1.x. Используется в tests/proxy_http.rs (Phase 8 .1)
# и tests/proxy_hop_by_hop.rs (Phase 8 .2).
[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"

# Phase 6.9 — integration smoke-test для Echo (tests/echo_smoke.rs).
# tempfile нужен для mock-CLI shell-скрипта.
tempfile = "3"

[[bin]]
name = "devforge"
path = "src/main.rs"
